# PortfolioScreener

./: .env.example  .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt  schema.sql
backend/app/: alpha_vantage.py  auth.py  config.py  csv_parser.py  database.py  finnhub.py  llm.py  main.py  models.py  parsers.py  router.py  schemas.py
backend/app/routes/: auth.py  chat.py  musterportfolio.py  portfolio.py  upload.py
frontend/: package-lock.json  tailwind.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/health/: route.ts
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/portfolio/: page.tsx
frontend/src/app/portfolio/[id]/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthProvider.tsx  ChatSidebar.tsx  FileUpload.tsx  HeroSection.tsx  Navbar.tsx  PortfolioTable.tsx  RequireAuth.tsx  StatsCard.tsx  UploadZone.tsx
frontend/src/lib/: api.ts
scripts/: start-mac.sh  stop-mac.sh
supabase/: config.toml  seed.sql
supabase/migrations/: 00001_initial_schema.sql
