[project]
name = "portfolio-analyzer-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.13",
    "python-dotenv>=1.1",
    "python-multipart>=0.0.20",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "httpx>=0.28",
    "xlrd>=2.0.2",
    "yfinance>=1.2.0",
]
